--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
         <div class="nav-list">
           <div class="hamburger"><div class="bar"></div></div>
           <ul>
-            <li><a href="#hero" data-after="Home">Home</a></li>
-            <li><a href="#services" data-after="Service">Services</a></li>
-            <li><a href="products.html" data-after="Projects">Products</a></li>
-            <li><a href="about.html" data-after="About">About us</a></li>
-            <li><a href="contact.html" data-after="Contact">Contact</a></li>
+            <li><a href="index.html" data-after="Home">Home</a></li>
+              <li><a href="faq.html" data-after="Projects">FAQ'S</a></li>
+              <li><a href="products.html" data-after="About">About Big5</a></li>
+              <li><a href="contact.html" data-after="Contact">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -67,7 +66,7 @@
         </div>
         
       </div>
-      <p>Copyright © 2021 Gamers Pride. All rights reserved|designed by Kaustubh Patil</p>
+      <p>Copyright © 2022 Personality Prediction. All rights reserved|designed by 17</p>
     </div>
   </section>
   <!-- End Footer -->
