--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,8 @@
             <div class="hamburger"><div class="bar"></div></div>
             <ul>
               <li><a href="index.html" data-after="Home">Home</a></li>
-              <li><a href="#services" data-after="Service">Services</a></li>
-              <li><a href="products.html" data-after="Projects">Products</a></li>
-              <li><a href="about.html" data-after="About">About us</a></li>
+              <li><a href="faq.html" data-after="Projects">FAQ'S</a></li>
+              <li><a href="products.html" data-after="About">About Big5</a></li>
               <li><a href="contact.html" data-after="Contact">Contact</a></li>
             </ul>
           </div>
